# Rust_Sentimental_Analysis

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  sample.csv
src/: db.rs  main.rs  utils.rs
templates/: index.html
