[package]
name = "rust-sentiment-analysis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.193"
serde_json = "1.0.108"
csv = "1.3.0"
regex = "1.10.2"
contractions = "0.5.4"
sentiment = "0.1.1"
mongodb = "2.7.1"
tera = "1.19.1"

[dependencies.rocket]
version = "0.5.0"
features = ["json"]
